# cinnamon-bluetooth

./: Makefile.am  README.md  cinnamon-bluetooth.pot  config.h.in  configure.ac  generate_additional_files.py  makepot
debian/: changelog  cinnamon.mk  control  control.in  rules
files/usr/share/cinnamon/applets/bluetooth@cinnamon.org/: applet.js
panels/: Makefile.am
panels/bluetooth/: Makefile.am  bluetooth.gresource.xml  cc-bluetooth-panel.c  cc-bluetooth-panel.h  cinnamon-bluetooth-properties.desktop.in.in
po/: POTFILES.in
